MAKAROV-AIRPORT/docker/compose/db-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-b
  labels:
    app: db-b
    role: db
spec:
  selector:
    matchLabels:
      app: db-b
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-b
    spec:
      containers:
      - name: db-b
        image: karimtufaistoujourslecon/db-master-b
        ports:
        - containerPort: 3307
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-b-data
      volumes:
      - name: db-b-data
        persistentVolumeClaim:
          claimName: db-b-pvc
