MAKAROV-AIRPORT/docker/compose/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml -o compose/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
          -o compose/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: makarov_airport
        - name: MYSQL_PASSWORD
          value: toto
        - name: MYSQL_ROOT_PASSWORD
          value: toto
        - name: MYSQL_USER
          value: gab
        image: mariadb
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data
status: {}
