MAKAROV-AIRPORT/docker/compose/djangopache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml -o compose/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: djangopache
    role: djangopache
  name: djangopache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: djangopache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
          -o compose/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        app: djangopache
    spec:
      containers:
      - args:
        - /usr/sbin/apache2ctl
        - -D
        - FOREGROUND
        image: karimtufaistoujourslecon/djangopache
        imagePullPolicy: ""
        name: djangopache
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
