MAKAROV-AIRPORT/docker/compose/micro1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml -o compose/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    app: micro1
    role: micro
  name: micro1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
          -o compose/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        app: micro1
    spec:
      containers:
      - args:
        - python3
        - sub_annulation.py
        image: karimtufaistoujourslecon/micro1
        imagePullPolicy: ""
        name: micro1
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
