MAKAROV-AIRPORT/docker/compose/micro2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: micro2
  name: micro2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: micro2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: micro2
    spec:
      containers:
      - args:
        - python3
        - sub_bancaire.py
        image: micro2
        imagePullPolicy: ""
        name: micro2
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
