MAKAROV-AIRPORT/docker/compose/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml -o compose/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nats
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
          -o compose/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_network: "true"
        io.kompose.service: nats
    spec:
      containers:
      - image: nats
        imagePullPolicy: ""
        name: nats
        ports:
        - containerPort: 4222
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
