MAKAROV-AIRPORT/docker/compose/web-rest-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-rest-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-rest-1
  template:
    metadata:
      labels:
        app: web-rest-1
    spec:
      containers:
      - name: web-rest-1
        image: karimtufaistoujourslecon/web-rest-1:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8001
      imagePullSecrets:
      - name: local-registry-secret
