MAKAROV-AIRPORT/docker/compose/web-rest-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-rest-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-rest-2
  template:
    metadata:
      labels:
        app: web-rest-2
    spec:
      containers:
      - name: web-rest-2
        image: karimtufaistoujourslecon/web-rest-2:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8002
      imagePullSecrets:
      - name: local-registry-secret
