MAKAROV-AIRPORT/docker/compose/web-rest-3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-rest-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-rest-3
  template:
    metadata:
      labels:
        app: web-rest-3
    spec:
      containers:
      - name: web-rest-3
        image: karimtufaistoujourslecon/web-rest-3:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8003
      imagePullSecrets:
      - name: local-registry-secret
