MAKAROV-AIRPORT/docker/compose/web-rest-4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: web-rest
  name: web-rest-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-rest-4
  template:
    metadata:
      labels:
        app: web-rest-4
    spec:
      containers:
      - name: web-rest-4
        image: karimtufaistoujourslecon/web-rest-4:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8004
      imagePullSecrets:
      - name: local-registry-secret
