MAKAROV-AIRPORT/docker/compose/db-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: db
  name: db-a-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db-a
