MAKAROV-AIRPORT/docker/compose/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml -o compose/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  ports:
  - name: "4222"
    port: 4222
    targetPort: 4222
  selector:
    io.kompose.service: nats
status:
  loadBalancer: {}
