MAKAROV-AIRPORT/docker/compose/web-rest-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f kompose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web-rest-1
  name: web-rest-1
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8000
  selector:
    io.kompose.service: web-rest-1
status:
  loadBalancer: {}
