MAKAROV-AIRPORT/docker/compose/web-rest-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-rest-3
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
    nodePort: 30083
  selector:
    app: web-rest-3
