MAKAROV-AIRPORT/docker/compose/my_network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: my_network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/my_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/my_network: "true"
