MAKAROV-AIRPORT/docker/compose/netpolicy.yaml
# Bloquer db -> djangopache, micro
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: djangopache
    - podSelector:
        matchLabels:
          app: micro

---
# Bloquer djangopache -> db, micro
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-djangopache
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: djangopache
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
    - podSelector:
        matchLabels:
          app: micro

---
# Bloquer micro -> db, djangopache
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-micro
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: micro
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
    - podSelector:
        matchLabels:
          app: djangopache

---
# Bloquer nats -> db, web-rest
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-nats
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
    - podSelector:
        matchLabels:
          app: web-rest

---
# Bloquer web-rest -> nats
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-web-rest
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-rest
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nats
